Add a code signing profile.

--- a/openchrom/pom.xml
+++ b/openchrom/pom.xml
@@ -237,4 +237,34 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+
+	<profiles>
+		<profile>
+			<id>codesign</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-jarsigner-plugin</artifactId>
+						<version>3.0.0</version>
+						<configuration>
+							<keystore>${jarsigner.keystore}</keystore>
+							<alias>${jarsigner.alias}</alias>
+							<storepass>${jarsigner.storepass}</storepass>
+							<keypass>${jarsigner.keypass}</keypass>
+						</configuration>
+						<executions>
+							<execution>
+								<id>sign</id>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 </project>
