--- a/openchrom/plugins/net.openchrom.msd.process.supplier.cms/build.properties
+++ b/openchrom/plugins/net.openchrom.msd.process.supplier.cms/build.properties
@@ -2,5 +2,4 @@ output.. = bin/
 source.. = src/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/,\
-               plugin.xml
+               OSGI-INF/
