--- a/openchrom/pom.xml
+++ b/openchrom/pom.xml
@@ -191,7 +191,7 @@
 							<configuration>
 								<rules>
 									<requireMavenVersion>
-									<version>3.9.2</version>
+										<version>3.9.2</version>
 									</requireMavenVersion>
 								</rules>
 							</configuration>
@@ -239,6 +239,30 @@
 	</build>
 
 	<profiles>
+		<profile>
+			<id>ci</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.eclipse.tycho</groupId>
+						<artifactId>tycho-p2-director-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>materialize-products</id>
+								<goals>
+									<goal>materialize-products</goal>
+								</goals>
+								<phase>none</phase>
+							</execution>
+							<execution>
+								<id>archive-products</id>
+								<phase>none</phase>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 		<profile>
 			<id>codesign</id>
 			<build>
