--- a/openchrom/tests/net.openchrom.xxd.process.supplier.templates.fragment.test/.project
+++ b/openchrom/tests/net.openchrom.xxd.process.supplier.templates.fragment.test/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>net.openchrom.xxd.process.supplier.templates.fragment.tests</name>
+	<name>net.openchrom.xxd.process.supplier.templates.fragment.test</name>
 	<comment></comment>
 	<projects>
 	</projects>
