--- a/openchrom/plugins/net.openchrom.installer.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.installer.ui/plugin.xml
@@ -1261,7 +1261,8 @@
          <icon image32="icons/32x32/ADF.png">
          </icon>
          <overview
-               summary="Commercial product. Requires valid license.">
+               summary="Commercial product. Requires valid license."
+               url="https://lablicate.com/marketplace/extensions/allotrope">
          </overview>
       </pluginDescriptor>
 
@@ -1278,7 +1279,8 @@
          <icon image32="icons/32x32/ASM.png">
          </icon>
          <overview
-               summary="Commercial product. Requires valid license.">
+               summary="Commercial product. Requires valid license."
+               url="https://lablicate.com/marketplace/extensions/allotrope">
          </overview>
       </pluginDescriptor>
 
@@ -1295,7 +1297,8 @@
          <icon image32="icons/32x32/OpenChrom.png">
          </icon>
          <overview
-               summary="Commercial product. Requires valid license.">
+               summary="Commercial product. Requires valid license."
+               url="https://lablicate.com/marketplace/extensions/mcr-ar">
          </overview>
       </pluginDescriptor>
 
@@ -1312,7 +1315,8 @@
          <icon image32="icons/32x32/OpenChrom.png">
          </icon>
          <overview
-               summary="Commercial product. Requires valid license.">
+               summary="Commercial product. Requires valid license."
+               url="https://lablicate.com/marketplace/extensions/chromident">
          </overview>
       </pluginDescriptor>
 
@@ -1329,7 +1333,8 @@
          <icon image32="icons/32x32/OpenChrom.png">
          </icon>
          <overview
-               summary="Commercial product. Requires valid license.">
+               summary="Commercial product. Requires valid license."
+               url="https://lablicate.com/marketplace/extensions/quantitation">
          </overview>
       </pluginDescriptor>
 
@@ -1346,7 +1351,8 @@
          <icon image32="icons/32x32/OpenChrom.png">
          </icon>
          <overview
-               summary="Commercial product. Requires valid license.">
+               summary="Commercial product. Requires valid license."
+               url="https://lablicate.com/marketplace/extensions/connector-db">
          </overview>
       </pluginDescriptor>
 
@@ -1363,7 +1369,8 @@
          <icon image32="icons/32x32/OpenChrom.png">
          </icon>
          <overview
-               summary="Commercial product. Requires valid license.">
+               summary="Commercial product. Requires valid license."
+               url="https://lablicate.com/marketplace/extensions/powertools">
          </overview>
       </pluginDescriptor>
 
@@ -1380,7 +1387,8 @@
          <icon image32="icons/32x32/OpenChrom.png">
          </icon>
          <overview
-               summary="Commercial product. Requires valid license.">
+               summary="Commercial product. Requires valid license."
+               url="https://lablicate.com/marketplace/extensions/rrf">
          </overview>
       </pluginDescriptor>
 
@@ -1397,7 +1405,8 @@
          <icon image32="icons/32x32/OpenChrom.png">
          </icon>
          <overview
-               summary="Commercial product. Requires valid license.">
+               summary="Commercial product. Requires valid license."
+               url="https://lablicate.com/marketplace/extensions/ambientairprocessor">
          </overview>
       </pluginDescriptor>
 
@@ -1414,7 +1423,8 @@
          <icon image32="icons/32x32/OpenChrom.png">
          </icon>
          <overview
-               summary="Commercial product. Requires valid license.">
+               summary="Commercial product. Requires valid license."
+               url="https://lablicate.com/marketplace/extensions/chrominspector">
          </overview>
       </pluginDescriptor>
 
@@ -1431,7 +1441,8 @@
          <icon image32="icons/32x32/OpenChrom.png">
          </icon>
          <overview
-               summary="Commercial product. Requires valid license.">
+               summary="Commercial product. Requires valid license."
+               url="https://lablicate.com/marketplace/extensions/tvoc">
          </overview>
       </pluginDescriptor>
 
@@ -1448,7 +1459,8 @@
          <icon image32="icons/32x32/OpenChrom.png">
          </icon>
          <overview
-               summary="Commercial product. Requires valid license.">
+               summary="Commercial product. Requires valid license."
+               url="https://lablicate.com/marketplace/extensions/pbm">
          </overview>
       </pluginDescriptor>
 
